--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
       <h1>Idemudia Spencer | WDD 130</h1>
-      <img src="images/profile.png" alt="Hello, my name is Idemudia Spencer." width="200">
+      <img src="images/profile.png" width="200">
       <p>Hello! My name is Idemudia Spencer and I am from Benin City, Nigeria.<br>
       Currently I reside in Ile-Ife, Nigeria with my family.  <br>  
       I am currently learning to become a programmer and web developer. <br>
