--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Hello my name is Idemudia Spencer, I am currently learning web development on wdd130.">
+    <meta name="author" content="Idemudia Spencer">
     <title>Idemudia Spencer | WDD 130</title>
   </head>
   <body>
