--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
       I am currently learning to become a programmer and web developer. <br>
       I love watching news and football. </p>
     </main>
+    <aside>
+      <h2>Ile-Ife</h2>
+      <img src="images/utah.jpg" alt="Utah landscape">
+      <p>Ile-Ife: Historic Nigerian city, cradle of Yoruba civilization, renowned for art, mythology, and cultural significance.<b>
+        The city is also home to the Obafemi Awolowo University, one of Nigeria's leading higher education institutions.
+      </b></p>
+    </aside>
     <footer>
       <p>©️2023 🌴 Idemudia Spencer 🌴 Ile-Ife, Nigeria</p>
     </footer>
