--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </main>
     <aside>
       <h2>Ile-Ife</h2>
-      <img src="images/utah.jpg" alt="Utah landscape">
+      <img src="images/nig.jpg" alt="Nigeria Flag">
       <p>Ile-Ife: Historic Nigerian city, cradle of Yoruba civilization, renowned for art, mythology, and cultural significance.<b>
         The city is also home to the Obafemi Awolowo University, one of Nigeria's leading higher education institutions.
       </b></p>
