--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </main>
     <aside>
       <h2>Ile-Ife</h2>
-      <img src="images/nig.jpg" alt="Nigeria Flag">
+      <img src="images/ifeart.jpg" alt="Ife Art">
       <p>Ile-Ife: Historic Nigerian city, cradle of Yoruba civilization, renowned for art, mythology, and cultural significance.<b>
         The city is also home to the Obafemi Awolowo University, one of Nigeria's leading higher education institutions.
-      </b></p>
+      </p>
     </aside>
     <footer>
       <p>©️2023 🌴 Idemudia Spencer 🌴 Ile-Ife, Nigeria</p>
