--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <aside>
       <h2>Ile-Ife</h2>
       <img src="images/ifeart.jpg" alt="Ife Art">
-      <p>Ile-Ife: Historic Nigerian city, cradle of Yoruba civilization, renowned for art, mythology, and cultural significance.<b>
+      <p>Ile-Ife: Historic Nigerian city, cradle of Yoruba civilization, renowned for art, mythology, and cultural significance.<br>
         The city is also home to the Obafemi Awolowo University, one of Nigeria's leading higher education institutions.
       </p>
     </aside>
