--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <h1>Idemudia Spencer | WDD 130</h1>
       <img src="images/profile.png" width="200">
-      <p>Hello! My name is Idemudia Spencer and I am from Benin City, Nigeria.<br>
+      <p>Hello! My name is <b>Idemudia Spencer</b> and I am from Benin City, Nigeria.<br>
       Currently I reside in Ile-Ife, Nigeria with my family.  <br>  
       I am currently learning to become a programmer and web developer. <br>
       I love watching news and football. </p>
