--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Idemudia Spencer | WDD 130</title>
     <meta name="description" content="Hello my name is Idemudia Spencer, I am currently learning web development on wdd130.">
     <meta name="author" content="Idemudia Spencer">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <header>
